grammar.js
    program: ($) =>
      repeat(choice($._statement, $._declaration, $.enum, ";")),

    // --- Declarations ---

    _declaration: ($) =>
      choice(
        $.method,
        $.class,
        $.module,
        $.export_method,
        $.type_alias,
      ),

    method: ($) =>
      method($, choice(
        $.constant,
        $.identifier,
        $.setter_name,
        $.self_method_name,
        $.operator_name,
      )),

    self_method_name: ($) =>
      seq("self", ".", choice($.identifier, $.constant), optional(token.immediate("="))),

    export_method: ($) =>
      seq(
        "export",
        $.method,
      ),

    parameters: ($) =>
      prec.dynamic(10, seq(
        "(",
        optional(
          seq(
            $._parameter,
            repeat(seq(",", $._parameter)),
            optional(","),
          ),
        ),
        ")",
      )),

    _parameter: ($) =>
      choice(
        $.typed_parameter,
        $.ivar_parameter,
        $.splat_parameter,
        $.double_splat_parameter,
        $.keyword_separator,
        $.block_parameter,
      ),

    block_parameter: ($) =>
      seq("&", field("name", choice($.identifier, $.constant)), token(prec(3, ":")), $.block_type),

    block_type: ($) =>
      seq(
        choice($.type_annotation, seq("(", optional(seq(
          $.type_annotation, repeat(seq(",", $.type_annotation)),
        )), ")")),
        optional(seq("->", $.type_annotation)),
      ),

    typed_parameter: ($) =>
      seq(
        field("name", choice($.identifier, $.constant)),
        token(prec(3, ":")),
        $.type_annotation,
        optional(seq("=", $._expression)),
      ),

    type_annotation: ($) =>
      seq(
        $._type,
        repeat(seq("|", $._type)),
      ),

    _type: ($) =>
      seq(choice(
        $.type_name,
        $.qualified_type_name,
        $.type_shape,
        $.type_tuple,
      ), optional("?")),

    type_name: ($) =>
      seq(
        choice(
          $.identifier,
          $.constant,
          "nil",
          "type",
        ),
        optional($.type_arguments),
      ),

    type_shape: ($) =>
      seq(
        choice("{", alias($._block_open, "{")),
        optional(seq(
          choice("...", seq($.type_shape_field,
            repeat(seq(",", $.type_shape_field)), optional(seq(",", "...")))),
          optional(","),
        )),
        "}",
      ),

    type_shape_field: ($) =>
      seq(
        field("name", choice($.identifier, $.constant, $.string, $.symbol, $.quoted_symbol)),
        optional("?"),
        token(prec(3, ":")),
        $.type_annotation,
      ),

    return_type: ($) =>
      seq(
        alias($._signature_arrow, "->"),
        $.type_annotation,
      ),

    module: ($) =>
      seq(
        alias($._module_keyword, "module"),
        field("name", $.constant),
        optional(field("body", alias($._module_body, $.module_body))),
        "end",
      ),

    // Members are bare word tokens, at least one required.
    _module_body: ($) =>
      repeat1(
        choice(
          ";",
          alias($._module_method, $.method),
          $.visibility_directive,
          $.module,
          $.class,
          $.type_alias,
          $.class_variable_assignment,
          $._non_alias_statement,
        ),
      ),

    alias: ($) =>
      seq(
        alias($._alias_keyword, "alias"),
        field("name", $._alias_name),
        field("target", $._alias_name),
      ),

    _alias_name: ($) =>
      choice($.identifier, $.symbol, $.quoted_symbol),

    _statement: ($) =>
      choice($.alias, $._non_alias_statement),

    command_call: ($) =>
      prec.right(seq(
        field("method", choice($.identifier, $.constant, $.member_access)),
        $._command_start,
        field("arguments", $.command_arguments),
        optional($.block),
      )),

    command_arguments: ($) =>
      prec.right(seq(
        $._command_argument,
        repeat(seq(",", $._command_argument)),
      )),

    _command_argument: ($) =>
      choice(
        $._argument,
        $.endless_range,
      ),

    modifier: ($) =>
      prec.left(seq(
        field("body", choice(
          $._expression,
          $.typed_assignment,
          $.return,
          $.break,
          $.next,
          $.retry,
          $.raise,
        )),
        field("keyword", choice(alias($._modifier_if, "if"), alias($._modifier_while, "while"))),
        field("condition", $._expression),
      )),

    assignment: ($) =>
      prec.right(PREC.ASSIGNMENT, seq(
        choice($.parenthesized_target, $._expression),
        "=",
        $._rhs_expression,
      )),

    typed_assignment: ($) =>
      seq(field("name", choice($.identifier, $.constant, $.instance_variable)),
        token(prec(3, ":")), $.type_annotation, optional(seq("=", $._rhs_expression))),

    _rhs_expression: ($) =>
      choice(
        $._expression,
        $.endless_range,
      ),

    _assignable_member_access: ($) =>
      prec.left(PREC.CALL - 1, seq(
        $._assignable_receiver,
        ".",
        $.identifier,
      )),

    _assignable_subscript: ($) =>
      prec(PREC.CALL, seq(
        $._assignable_receiver,
        alias($._index_open, "["),
        $._expression_or_closed_range,
        repeat(seq(",", $._expression_or_closed_range)),
        "]",
      )),

    splat_target: ($) =>
      seq("*", optional(choice($.identifier, $.constant, alias($._assignable_member_access, $.member_access), alias($._assignable_subscript, $.subscript)))),

    compound_assignment: ($) =>
      prec.right(PREC.ASSIGNMENT, seq(
        choice($.parenthesized_target, $._expression),
        choice("+=", "-=", "*=", "/=", "//=", "%=", "**=", "||=", "&&="),
        $._rhs_expression,
      )),

    break: ($) =>
      prec.right(seq("break", optional($._expression))),

    next: ($) =>
      prec.right(seq("next", optional($._expression))),

    yield: ($) =>
      prec.right(seq(
        "yield",
        optional(choice(
          prec.dynamic(10, seq(choice(alias($._call_open, "("), "("), optional($.argument_list), ")")),
          $.argument_list,
        )),
      )),

    require: ($) =>
      prec.dynamic(5, seq(
        field("variable", choice($.identifier, $.constant)),
        "=",
        "require",
        alias($._call_open, "("),
        $.string,
        optional(seq(",", "as", token(prec(3, ":")), $.string)),
        ")",
      )),

    // --- Control Flow ---

    if: ($) =>
      seq(
        "if",
        field("condition", $._expression),
        optional("then"),
        optional($._body),
        repeat($.elsif),
        optional($.else),
        "end",
      ),

    else: ($) =>
      seq(
        "else",
        optional($._body),
      ),

    case: ($) =>
      seq(
        "case",
        optional(field("subject", $._expression)),
        repeat(";"),
        repeat1($.when),
        optional($.else),
        "end",
      ),

    when: ($) =>
      seq(
        "when",
        $._when_pattern,
        repeat(seq(",", $._when_pattern)),
        optional("then"),
        optional($._body),
      ),

    _when_pattern: ($) =>
      choice($._range_or_expression, $.splat_argument),

    while: ($) =>
      seq(
        "while",
        field("condition", $._expression),
        optional($._body),
        "end",
      ),

    // For-loop variables are block-parameter-style bindings: identifiers,
    // splats, and nested groups only. Member, index, and instance-variable
    // targets are parse errors in the interpreter.
    for: ($) =>
      seq(
        "for",
        field("variable", $._for_target),
        repeat(seq(",", field("variable", $._for_target))),
        "in",
        field("iterable", $._expression),
        optional($._body),
        "end",
      ),

    _for_target: ($) =>
      choice(
        $.identifier,
        $.constant,
        $.splat_target,
        alias($._for_target_group, $.destructured_target),
      ),

    _expression: ($) =>
      choice(
        $.yield,
        $.command_call,
        $.assignment,
        $.compound_assignment,
        $.ternary,
        $.binary,
        $.unary,
        $.beginless_range,
        $.rescue_modifier,
        $.call,
        $.member_access,
        $.computed_call,
        $.scope_resolution,
        $.subscript,
        $._primary,
      ),

    binary: ($) =>
      choice(
        prec.left(PREC.OR, seq($._expression, "||", $._expression)),
        prec.left(PREC.AND, seq($._expression, "&&", $._expression)),
        prec.left(PREC.EQUALITY, seq($._expression, choice("==", "===", "!=", "=~", "!~"), $._expression)),
        prec.left(PREC.COMPARISON, seq($._expression, choice("<", ">", "<=", ">=", "<=>"), $._expression)),
        prec.left(PREC.RANGE, seq($._expression, choice("..", "..."), $._expression)),
        prec.left(PREC.BIT_AND, seq($._expression, "&", $._expression)),
        prec.left(PREC.SHIFT, seq($._expression, "<<", $._expression)),
        prec.left(PREC.ADDITIVE, seq($._expression, choice("+", "-"), $._expression)),
        prec.left(PREC.MULTIPLICATIVE, seq($._expression, choice(alias($._multiply, "*"), alias($._divide, "/"), "/", "//", "%"), $._expression)),
        prec.right(PREC.POWER, seq($._expression, "**", $._expression)),
      ),

    // Dynamic -1: when GLR can read `expr .. expr` either as one binary range
    // or as `expr` followed by a beginless-range statement, the binary range
    // wins.
    beginless_range: ($) =>
      prec.dynamic(-1, prec.left(PREC.RANGE, seq(
        choice("..", "..."),
        $._expression,
      ))),

    endless_range: ($) =>
      prec.left(PREC.RANGE, seq(
        $._expression,
        choice("..", "..."),
        $._endless_marker,
      )),

    _expression_or_closed_range: ($) =>
      choice(
        $._expression,
        alias($._endless_range_closed, $.endless_range),
      ),

    // The external keyword only fires on the body's own line, so a `rescue`
    // opening a new line always reads as a begin/def rescue clause.
    ternary: ($) =>
      prec.right(PREC.CONDITIONAL, seq(
        $._expression,
        "?",
        $._expression,
        token(prec(3, ":")),
        $._expression,
      )),

    unary: ($) =>
      prec(PREC.UNARY, seq(
        choice("-", "+", "!"),
        $._expression,
      )),

    scope_resolution: ($) =>
      prec.left(PREC.CALL, seq(
        $._expression,
        token(prec(4, "::")),
        choice($.identifier, $.constant),
      )),

    call: ($) =>
      prec.right(PREC.CALL, choice(
        seq(
          field("receiver", optional(seq($._expression, choice(".", "&.")))),
          field("method", choice($.identifier, $.constant)),
          alias($._call_open, "("),
          optional($.argument_list),
          ")",
          optional($.block),
        ),
        seq(
          field("receiver", optional(seq($._expression, choice(".", "&.")))),
          field("method", choice($.identifier, $.constant)),
          $.block,
        ),
      )),

    member_access: ($) =>
      prec.left(PREC.CALL - 1, seq(
        $._expression,
        choice(".", "&."),
        choice($.identifier, $.constant, $.operator_name),
        optional($.block),
      )),

    subscript: ($) =>
      prec(PREC.CALL, seq(
        $._expression,
        alias($._index_open, "["),
        $._expression_or_closed_range,
        repeat(seq(",", $._expression_or_closed_range)),
        "]",
      )),

    argument_list: ($) =>
      seq(
        $._paren_argument,
        repeat(seq(",", $._paren_argument)),
        optional(","),
      ),

    _paren_argument: ($) =>
      choice(
        $._argument,
        alias($._endless_range_closed, $.endless_range),
      ),

    keyword_argument: ($) =>
      prec.right(seq(
        field("key", choice($.identifier, $.constant, alias($._keyword_label, $.identifier))),
        token(prec(3, ":")),
        optional(field("value", $._expression_or_closed_range)),
      )),

    type_literal: ($) => prec.dynamic(-2, $.type_annotation),

    parenthesized: ($) =>
      seq("(", $._expression_or_closed_range, ")"),

    array: ($) =>
      seq(
        "[",
        optional(
          seq(
            $._expression_or_closed_range,
            repeat(seq(",", $._expression_or_closed_range)),
            optional(","),
          ),
        ),
        "]",
      ),

    hash: ($) =>
      seq(
        choice("{", alias($._block_open, "{")),
        optional(
          seq(
            $.hash_entry,
            repeat(seq(",", $.hash_entry)),
            optional(","),
          ),
        ),
        "}",
      ),

    hash_entry: ($) =>
      choice(
        seq(
          field("key", choice($.identifier, $.constant, $.string)),
          token(prec(3, ":")),
          field("value", $._expression_or_closed_range),
        ),
        // Expression-position shape literals (JSON.parse_as schemas): the
        // value reads as a type annotation. The dynamic penalty keeps the
        // expression reading for groups that parse both ways ({ id: string }),
        // so this branch only wins where only type syntax parses
        // (string | nil, array<int>).
        prec.dynamic(-1, seq(
          field("key", choice($.identifier, $.constant, $.string)),
          token(prec(3, ":")),
          field("value", $.type_annotation),
        )),
        // Nullable builtin shorthand ({ name: string? }): a ?-suffixed
        // builtin type name is always a shape field, mirroring the
        // interpreter's builtin-leaf rule, while other ?-suffixed
        // identifiers ({ ok: valid? }) keep the expression reading.
        prec.dynamic(1, seq(
          field("key", choice($.identifier, $.constant, $.string)),
          token(prec(3, ":")),
          field("value", alias($.nullable_builtin_type, $.type_annotation)),
        )),
        // value omission: { name:, age: } takes the value from a local of the same name
        seq(
          field("key", choice($.identifier, $.constant)),
          token(prec(3, ":")),
        ),
      ),

    // --- Body ---

    _body: ($) =>
      repeat1(choice($._non_alias_statement, $.class, $.method, ";")),

    // --- Terminals ---

    identifier: (_$) =>
      new RegExp(UNICODE.identifier, "u"),

    constant: (_$) =>
      new RegExp(UNICODE.constant, "u"),

    integer: (_$) =>
      token(choice(
        /0[xX][0-9a-fA-F](_?[0-9a-fA-F])*/,
        /0[bB][01](_?[01])*/,
        /0[oO][0-7](_?[0-7])*/,
        /0[dD][0-9](_?[0-9])*/,
        /\d(_?\d)*/,
      )),

    // An exponent marker makes the literal a float even without a decimal
    // point (1e3 is 1000.0), matching the interpreter.
    float: (_$) =>
      token(choice(
        /\d(_?\d)*\.\d(_?\d)*([eE][+-]?\d(_?\d)*)?/,
        /\d(_?\d)*[eE][+-]?\d(_?\d)*/,
      )),

    // Every intra-string token is immediate so the whitespace/comment extras
    // can never fire between the quote and its contents.
    string: ($) =>
      choice(
        seq(
          '"',
          repeat(choice(
            $.string_content,
            // A '#' not opening an interpolation is plain text; '#{' wins
            // over this single-character token by longest match.
            alias(token.immediate(prec(1, '#')), $.string_content),
            $.escape_sequence,
            $.interpolation,
          )),
          token.immediate('"'),
        ),
        // Single-quoted strings only recognize \' and \\; every other
        // backslash (and any #{...}) is literal text, matching the
        // interpreter.
        seq(
          "'",
          repeat(choice(
            alias(token.immediate(prec(1, /[^'\\]+/)), $.string_content),
            alias(token.immediate(/\\['\\]/), $.escape_sequence),
            alias(token.immediate('\\'), $.string_content),
          )),
          token.immediate("'"),
        ),
      ),

    string_content: (_$) =>
      token.immediate(prec(1, /[^"\\#]+/)),

    true: (_$) => "true",
