test/corpus/literals.txt
================
Integers
================

42
1_000_000

---

(program
  (integer)
  (integer))

================
Floats
================

3.14
10.5

---

(program
  (float)
  (float))

================
Base-prefixed integers
================

0xFF
0xDEAD_BEEF
0b1010
0b1_0_1
0o755
0d99
123456789012345678901234567890

---

(program
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer)
  (integer))

================
Exponent floats
================

1e3
1.5e-2
1E6
1e1_0
2.5E+10

---

(program
  (float)
  (float)
  (float)
  (float)
  (float))

================
Exponent float with modifier keyword suffix
================

x = 1e3 if ok

---

(program
  (modifier
    (assignment
      (identifier)
      (float))
    (identifier)))

================
Strings
================

"hello"
"line\nnext"

---

(program
  (string
    (string_content))
  (string
    (string_content)
    (escape_sequence)
    (string_content)))

================
Symbols
================

:read
:write

---

(program
  (symbol)
  (symbol))

================
Single-quoted strings
================

'hello'
'don\'t \\ stop'
'no #{interp} or \n escapes'

---

(program
  (string
    (string_content))
  (string
    (string_content)
    (escape_sequence)
    (string_content)
    (escape_sequence)
    (string_content))
  (string
    (string_content)
    (string_content)
    (string_content)))

================
Operator and suffixed symbols
================

:<=>
:[]=
:name?
:save!

---

(program
  (symbol)
  (symbol)
  (symbol)
  (symbol))

================
Quoted symbols in both quote styles
================

:"multi word"
:'foo bar'
:""
:'don\'t'
:"say \"hi\""

---

(program
  (quoted_symbol)
  (quoted_symbol)
  (quoted_symbol)
  (quoted_symbol)
  (quoted_symbol))

================
Quoted literals as command arguments
================

puts 'hi'
puts ["a", "b"]

---

(program
  (command_call
    (identifier)
    (command_arguments
      (string
        (string_content))))
  (command_call
    (identifier)
    (command_arguments
      (array
        (string
          (string_content))
        (string
          (string_content))))))

================
Booleans
================

true
false

---

(program
  (true)
  (false))

================
Nil
================

nil

---

(program
  (nil))

================
Arrays
================

[1, 2, 3]

---

(program
  (array
    (integer)
    (integer)
    (integer)))

================
Hashes
================

{ name: "alex", active: true }

---

(program
  (hash
    (hash_entry
      key: (identifier)
      value: (string
        (string_content)))
    (hash_entry
      key: (identifier)
      value: (true))))

================
Hex and unicode string escapes
================

puts "\x41\u0041\e"

---

(program
  (command_call
    (identifier)
    (command_arguments
      (string
        (escape_sequence)
        (escape_sequence)
        (escape_sequence)))))

================
Subscript slicing with two indices
================

x = arr[1, 2]

---

(program
  (assignment
    (identifier)
    (subscript
      (identifier)
      (integer)
      (integer))))

================
Operator symbols as command arguments
================

puts :+
puts :<=>

---

(program
  (command_call
    method: (identifier)
    arguments: (command_arguments
      (symbol)))
  (command_call
    method: (identifier)
    arguments: (command_arguments
      (symbol))))
