test/corpus/loops.txt
================
While loop
================

while n > 0
  n = n - 1
end

---

(program
  (while
    condition: (binary
      (identifier)
      (integer))
    (assignment
      (identifier)
      (binary
        (identifier)
        (integer)))))

================
Negated while loop
================

while n < limit
  n = n + 1
end

---

(program
  (while
    condition: (binary
      (identifier)
      (identifier))
    (assignment
      (identifier)
      (binary
        (identifier)
        (integer)))))

================
For in loop
================

for i in 1..10
  total = total + i
end

---

(program
  (for
    variable: (identifier)
    iterable: (binary
      (integer)
      (integer))
    (assignment
      (identifier)
      (binary
        (identifier)
        (identifier)))))

================
Break and next
================

while true
  if done
    break
  end
  if skip
    next
  end
end

---

(program
  (while
    condition: (true)
    (if
      condition: (identifier)
      (break))
    (if
      condition: (identifier)
      (next))))

================
For loops over destructured targets
================

for k, v in h
  puts k
end

for head, * in rows
  puts head
end

---

(program
  (for
    variable: (identifier)
    variable: (identifier)
    iterable: (identifier)
    (command_call
      method: (identifier)
      arguments: (command_arguments
        (identifier))))
  (for
    variable: (identifier)
    variable: (splat_target)
    iterable: (identifier)
    (command_call
      method: (identifier)
      arguments: (command_arguments
        (identifier)))))
