test/corpus/new_literals.txt
================
Regex literal with flags
================

def run
  x = /ab+c/i
end

---

(program
  (method
    (identifier)
    (assignment
      (identifier)
      (regex))))

================
Explicit word and symbol arrays
================

def run
  a = ["one", "two", "three"]
  b = [:a, :b, :c]
end

---

(program
  (method
    (identifier)
    (assignment
      (identifier)
      (array
        (string
          (string_content))
        (string
          (string_content))
        (string
          (string_content))))
    (assignment
      (identifier)
      (array
        (symbol)
        (symbol)
        (symbol)))))

================
Quoted symbol
================

def run
  x = :"multi word"
end

---

(program
  (method
    (identifier)
    (assignment
      (identifier)
      (quoted_symbol))))
