test/corpus/operators.txt
================
Binary operators and precedence
================

def run
  a + b * c - d / e % f
end

---

(program
  (method
    (identifier)
    (binary
      (binary
        (identifier)
        (binary
          (identifier)
          (identifier)))
      (binary
        (binary
          (identifier)
          (identifier))
        (identifier)))))

================
Shift power spaceship and match
================

def run
  x = a << b
  y = a ** b
  z = a <=> b
  m = a === b
  n = s =~ /re/
end

---

(program
  (method
    (identifier)
    (assignment
      (identifier)
      (binary
        (identifier)
        (identifier)))
    (assignment
      (identifier)
      (binary
        (identifier)
        (identifier)))
    (assignment
      (identifier)
      (binary
        (identifier)
        (identifier)))
    (assignment
      (identifier)
      (binary
        (identifier)
        (identifier)))
    (assignment
      (identifier)
      (binary
        (identifier)
        (regex)))))

================
Ternary conditional
================

def run
  x = cond ? a : b
end

---

(program
  (method
    (identifier)
    (assignment
      (identifier)
      (ternary
        (identifier)
        (identifier)
        (identifier)))))

================
Ranges inclusive and exclusive
================

def run
  a = 1..5
  b = 1...5
end

---

(program
  (method
    (identifier)
    (assignment
      (identifier)
      (binary
        (integer)
        (integer)))
    (assignment
      (identifier)
      (binary
        (integer)
        (integer)))))

================
Scope resolution
================

def run
  Status::Active
end

---

(program
  (method
    (identifier)
    (scope_resolution
      (constant)
      (constant))))

================
Compound assignments
================

def run
  a += 1
  a **= 2
  a ||= 3
  a &&= 4
  a %= 5
end

---

(program
  (method
    (identifier)
    (compound_assignment
      (identifier)
      (integer))
    (compound_assignment
      (identifier)
      (integer))
    (compound_assignment
      (identifier)
      (integer))
    (compound_assignment
      (identifier)
      (integer))
    (compound_assignment
      (identifier)
      (integer))))

================
Unary operators
================

def run
  a = -x
  b = +x
  c = !x
end

---

(program
  (method
    (identifier)
    (assignment
      (identifier)
      (unary
        (identifier)))
    (assignment
      (identifier)
      (unary
        (identifier)))
    (assignment
      (identifier)
      (unary
        (identifier)))))

================
Safe navigation
================

def run
  user&.name
end

---

(program
  (method
    (identifier)
    (member_access
      (identifier)
      (identifier))))

================
Symbolic negation
================

ok = !ready
puts !ok

---

(program
  (assignment
    (identifier)
    (unary
      (identifier)))
  (command_call
    (identifier)
    (command_arguments
      (unary
        (identifier)))))

================
Symbolic boolean precedence
================

a = !false || true
b = !x && y

---

(program
  (assignment
    (identifier)
    (binary
      (unary
        (false))
      (true)))
  (assignment
    (identifier)
    (binary
      (unary
        (identifier))
      (identifier))))

================
Former boolean operators are ordinary names
================

def names(and: any, or: any, not: any)
  [and, or, not]
end
and = 1
or = 2
not = 3
takes(and:, or:, not:)

---

(program
  (method
    (identifier)
    (parameters
      (typed_parameter
        (identifier)
        (type_annotation
          (type_name
            (identifier))))
      (typed_parameter
        (identifier)
        (type_annotation
          (type_name
            (identifier))))
      (typed_parameter
        (identifier)
        (type_annotation
          (type_name
            (identifier)))))
    (array
      (identifier)
      (identifier)
      (identifier)))
  (assignment
    (identifier)
    (integer))
  (assignment
    (identifier)
    (integer))
  (assignment
    (identifier)
    (integer))
  (call
    (identifier)
    (argument_list
      (keyword_argument
        (identifier))
      (keyword_argument
        (identifier))
      (keyword_argument
        (identifier)))))

================
Semicolon statement separators
================

def run; a = 1; b = 2; a + b; end

---

(program
  (method
    (identifier)
    (assignment
      (identifier)
      (integer))
    (assignment
      (identifier)
      (integer))
    (binary
      (identifier)
      (identifier))))

================
Semicolons end expressions before unary operators
================

def run; n = 1; +2; n; end

---

(program
  (method
    (identifier)
    (assignment
      (identifier)
      (integer))
    (unary
      (integer))
    (identifier)))

================
Semicolons end parenless calls
================

puts; 1

---

(program
  (identifier)
  (integer))

================
Semicolons end method signatures
:error
================

def foo; -> int
  1
end

---
